# MCP

./: .gitignore  COMMIT_FIX.md  COMMIT_INSTRUCTIONS.md  FIX_GIT_ADD.md  PUSH_STATUS.md  README.md  commit_all.sh  commit_and_push.sh
mcp-servers/: .dockerignore  .gitignore  AVAILABLE_TOOLS.md  DOCKER_DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile  NGINX_SETUP.md  PDF_GENERATOR_SETUP.md  QUICK_START.md  README.md  REDIS_PERSISTENCE.md  SETUP_CHECKLIST.md  docker-compose.yml  mcp_client_config_cursor_local.json  mcp_client_config_cursor_local_command.json  mcp_client_config_cursor_remote.json  pyproject.toml  register_fedfina_minio.py  register_fedfina_tenant.py  setup_for_cursor.sh  test_fedfina_registration.py  test_genimage_remote.py  test_mcp_http_registration.py  verify_fedfina.py
mcp-servers/.devcontainer/: README.md  devcontainer.json  docker-helper.sh  post-create.sh
mcp-servers/docker/: nano-banana_Dockerfile.snippet  nano-banana_docker-compose.snippet
mcp-servers/docs/: COMPLETE_MCP_SERVERS_GUIDE.md  CURSOR_TROUBLESHOOTING.md  README.md  SSL_CERTIFICATE_FIX.md  STATELESS_MULTI_TENANT.md  TENANT_PERSISTENCE.md  ai-mcp-server.md  calculator.md  ffmpeg.md  mail.md  meilisearch.md  minio.md  nano-banana.md  openproject.md  pdf-generator.md  postgres.md
mcp-servers/examples/: calculator_example.py  meilisearch_example.py  minio_example.py  nano-banana_example.py  pdf-generator_example.py  pdf_generator_example.py  postgres_example.py
mcp-servers/k8s/: DEPLOYMENT_SUMMARY.md  PERSISTENCE_SETUP.md  QUICK_START.md  README.md  REDIS_DATABASE_PATTERN.md  deploy.sh  (+6 more)
(+106 files in other folders)
