[project]
name = "mcp-servers"
version = "0.1.0"
description = "MCP servers and clients for Calculator, Postgres, and Minio"
authors = [{ name = "Bionic-AI-Solutions" }]
dependencies = [
    "fastmcp>=2.0.0,<3.0",
    "psycopg[binary,pool]>=3.2.0",
    "minio>=7.2.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "redis>=5.0.0",
    "weasyprint>=60.0",
    "reportlab>=4.0.0",
    "httpx>=0.25.0",
    "email-validator>=2.1.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.12.8",
    "black>=24.0.0",
]

[project.scripts]
mcp-calculator-server = "mcp_servers.calculator.server:main"
mcp-postgres-server = "mcp_servers.postgres.server:main"
mcp-minio-server = "mcp_servers.minio.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

